# natural-language-processing

./: .gitignore  README.md  pyproject.toml
assignment_1_embeddings/: glove.Rmd  glove.html  glove_evaluation.Rmd  glove_evaluation.html  glove_sentiment_analysis.Rmd  glove_sentiment_analysis.html  preprocessing.ipynb  skip-gram.ipynb  skip-gram_sentiment_analysis.ipynb  sppmi-svd.ipynb  sppmi-svd_evaluation.ipynb  sppmi-svd_sentiment_analysis.ipynb  w2v_evaluation.ipynb  w2v_sentiment_analysis.ipynb
assignment_2_language_modelling/: README.md  lstm.ipynb  requirements.txt  rnn.ipynb
assignment_3_finetuning/: README.md  data_processing.ipynb  requirements.txt
assignment_3_finetuning/src/: data_processing.ipynb  finetune_BERT.ipynb  finetune_BERT_LoRA.ipynb  main.py
