[project]
name = "natural-language-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "yjiahao",email = "yjiahao123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gensim (>=4.3.3,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
